--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/prettier": "^2.4.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "@types/react-resizable": "^1.7.4",
     "@uiw/react-md-editor": "^2.1.1",
     "axios": "^0.25.0",
@@ -21,8 +22,11 @@
     "monaco-editor": "^0.31.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
