--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "^0.8.27",
+    "immer": "^9.0.12",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.31.1",
     "react": "^17.0.2",
